--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 Flask==2.3.2
 Werkzeug==2.3.4
 gunicorn==20.1.0
+google-auth==2.6.0
+google-auth-oauthlib==0.5.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.31.0
+beautifulsoup4==4.12.2
